<resources>
    <string name="app_name">COVID-19 Information</string>
    <string name="title_activity_remove_entry">RemoveEntry</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <!-- Start Activity -->

    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="admin_panel">Admin Panel</string>
    <string name="logout">Logout</string>

    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="Greek">Greek</string>

    <string name="view_cases">View Cases</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="edit_case">Edit Case</string>
    <string name="add_case">Add Case</string>

    <string name="full_name">Full Name</string>
    <string name="phone">Phone</string>
    <string name="amka">AMKA</string>
    <string name="current_state">Current State</string>
    <string name="time">Time</string>
    <string name="location">Location</string>

    <string name="ill">Currently Ill</string>
    <string name="recovered">Recovered</string>
    <string name="deceased">Deceased</string>


    <string name="all">All</string>
    <string name="total">Total</string>

    <string name="statistics">Statistics</string>


    <!--Toasts-->

    <string name="suc_login">User Logged in Successfully</string>
    <string name="fail_auth">Unable to Authenticate</string>
    <string name="fail_cred">Incorrect Credentials Provided</string>
    <string name="empty_fields">Please Fill in All Fields</string>
    <string name="weak_pass">Weak Password</string>
    <string name="weak_pass_txt">Password must be at least 8 characters</string>
    <string name="reg_succ">User Created Successfully</string>
    <string name="db_error">Database Error</string>
    <string name="db_error_txt">"Maybe user already exists or poor internet connection"</string>
    <string name="insuff_data">Insufficient Data</string>
    <string name="entry_created">New Entry Created </string>
    <string name="entry_edited">Entry Edited</string>

    <string name="no_gps">GPS Permissions Required</string>

</resources>